# callculator

./: .pre-commit-config.yaml  .pre-commit.yaml  LICENSE  README.md  entrypoint-render.sh  pyproject.toml  pytest.ini
.github/workflows/: django.yml
callculator/: admin.py  apps.py  models.py  serializers.py  tests.py  tools.py  urls.py
callculator/migrations/: 0001_initial.py  0002_billing_call_duration.py
callculator/tests/: test_serializers.py  test_tools.py
callculator/views/: billing.py  callrecord.py  health.py
core/: asgi.py  settings.py  urls.py  wsgi.py
